# llvm-hs-pretty

./: .gitignore  .travis.yml  ChangeLog.md  Example.hs  LICENSE  Main.hs  README.md  Standalone.hs  default.nix  llvm-hs-pretty.cabal  llvm-pp.cabal  shell.nix  snapshot.yaml  stack.yaml
src/: LLVM.hs
src/LLVM/: General.hs  Pretty.hs  Token.hs  Typed.hs
src/LLVM/General/: Pretty.hs  Typed.hs
src/LLVM/Pretty/: Typed.hs
tests/: Main.hs  debug.ll  for.ll  full.ll  if.ll  loopnest.ll
tests/anomalous/: asm.ll  comparison.ll  debug_metadata_namespace.ll  float.ll  for.ll  packed.ll  range.ll  record.ll
tests/broken/: global.ll
tests/input/: alias.ll  cast.ll  clang.ll  comparison.ll  const.ll  datalayout.ll  debug.ll  debug_metadata_array.ll  debug_metadata_dimodule.ll  debug_metadata_enum.ll  debug_metadata_global.ll  debug_metadata_macro.ll  debug_metadata_namespace.ll  debug_metadata_objcproperty.ll  debug_metadata_qualifiers.ll  debug_metadata_templateparameter.ll  debug_metadata_tu_composite.ll  debug_metadata_union.ll  float.ll  full.ll  func.ll  hello.ll  if.ll  inst_memory.ll  inst_other.ll  intrinsic.ll  loopnest.ll  metadata.ll  multiple.ll  named-struct.ll  names.ll  packed.ll  pair.ll  prefix.ll  range.ll  record.ll  saxpy.ll  simple.ll  term.ll  type.ll  (+1 more)
