name:                llvm-hs-pretty
version:             0.9.0.0
license:             MIT
synopsis:            A pretty printer for LLVM IR. 
description:         A pretty printer for the LLVM AST types provided by llvm-hs.
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
category:            Compilers
cabal-version:       >=1.10
homepage:            https://github.com/llvm-hs/llvm-hs-pretty
extra-source-files:  README.md ChangeLog.md tests/input/*.ll

Source-Repository head
    Type: git
    Location: git@github.com:llvm-hs/llvm-hs-pretty.git

library
  hs-source-dirs:      src
  exposed-modules:     
    LLVM.Pretty
  ghc-options:
    -fwarn-incomplete-patterns
  default-language:    Haskell2010
  build-depends:
    array                >= 0.5,
    base                 >= 4.6   && < 5.0,
    bytestring           >= 0.10,
    llvm-hs-pure         >= 9.0  && < 10.0,
    text                 >= 0.1,
    prettyprinter        >= 1.2

Test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: 
    base                 >= 4.6 && < 5.0,
    text                 >= 0.1,
    mtl                  >= 2.2,
    transformers         >= 0.3 && < 0.6,
    directory            >= 1.2,
    filepath             >= 1.3,
    tasty                >= 0.11,
    tasty-hspec          >= 1.1,
    tasty-hunit          -any,
    tasty-golden         >= 1.1,
    llvm-hs-pretty       -any,
    llvm-hs              >= 9.0  && < 10.0,
    llvm-hs-pure         >= 9.0  && < 10.0
