name:                llvm-hs-pretty
version:             12.0.0
license:             MIT
synopsis:            A pretty printer for LLVM IR.
description:         A pure Haskell pretty printer for the LLVM AST types provided by llvm-hs.
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
category:            Compilers
cabal-version:       >=1.10
homepage:            https://github.com/llvm-hs/llvm-hs-pretty
extra-source-files:  README.md ChangeLog.md tests/input/*.ll

Source-Repository head
    Type: git
    Location: git@github.com:llvm-hs/llvm-hs-pretty.git

library
  hs-source-dirs:      src
  exposed-modules:
    LLVM.Pretty
  ghc-options:
    -fwarn-incomplete-patterns
  default-language:    Haskell2010
  build-depends:
    array, base, bytestring, prettyprinter, text,
    llvm-hs-pure >= 12 && < 13

Test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base, directory, filepath, mtl, tasty, tasty-golden, tasty-hspec,
    tasty-hunit, text, transformers,
    llvm-hs              >= 12   && < 13,
    llvm-hs-pure         >= 12   && < 13,
    llvm-hs-pretty       >= 12   && < 13
